recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: not found: value snowside
		snowside(levels,length);
                ^Koch:20: error: not found: value snowside
		snowside(levels,length);
                ^Koch:23: error: not found: value snowside
		snowside(levels,length);
                ^